apps/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: servarr
  labels:
    app.kubernetes.io/name: audiobookshelf
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: audiobookshelf
  ports:
    - name: http
      port: 13378
      targetPort: http
      protocol: TCP
